--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Borgir Game</title>
+        <title>BurgerStack Game</title>
         <link rel="stylesheet" href="style.css" />
         <script src="matter.min.js"></script>
     </head>
     <body>
         <div id="score">
             <p id="scoreValue">0</p>
-            <p id="scoreCombo"></p>
+            <p id="scoreCombo">x1</p>
+        </div>
+        <div id="gameOverScreen" style="display: none">
+            <h1>Game Over</h1>
+            <p>Your Score: <span id="finalScore">0</span></p>
+            <p>High Score: <span id="highScore">0</span></p>
+            <p>Total meat used: <span id="totalPatty">0</span></p>
+            <button id="reviewButton">Review</button>
+
+            <button id="restartButton">Restart</button>
+        </div>
+        <div id="notification">
+            <h3 id="noteHeading">a</h3>
+            <canvas id="noteImage" width="100px" height="25px"></canvas>
+            <p id="noteText">b</p>
         </div>
         <canvas id="mainCanvas"></canvas>
         <div id="debugCanvas"></div>
